<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.10" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/app_bar_height"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/title_icon"
                        android:layout_width="@dimen/icon_edit_large"
                        android:layout_height="@dimen/icon_edit_large"
                        android:src="@drawable/ic_action_title"
                        android:tint="@color/colorBlack" />

                    <LinearLayout
                        android:id="@+id/title_texts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/title_icon"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_title"
                            android:textSize="@dimen/font_edit_large"
                            android:textStyle="bold" />

                        <EditText
                            android:visibility="gone"
                            android:id="@+id/title_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Add Title..."
                            android:background="@null"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/font_edit_small" />

                        <TextView
                            android:visibility="visible"
                            android:id="@+id/title_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textSize="@dimen/font_edit_small" />
                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/date_icon"
                        android:layout_width="@dimen/icon_edit_large"
                        android:layout_height="@dimen/icon_edit_large"
                        android:src="@drawable/ic_action_calendar"
                        android:tint="@color/colorBlack" />

                    <LinearLayout
                        android:id="@+id/date_texts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/date_icon"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_title"
                            android:textSize="@dimen/font_edit_large"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/start_date_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:textSize="@dimen/font_edit_small" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" to " />

                            <TextView
                                android:id="@+id/end_date_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:textSize="@dimen/font_edit_small" />
                        </LinearLayout>
                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/time_icon"
                        android:layout_width="@dimen/icon_edit_large"
                        android:layout_height="@dimen/icon_edit_large"
                        android:src="@drawable/ic_action_clock"
                        android:tint="@color/colorBlack" />

                    <LinearLayout
                        android:id="@+id/time_texts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/time_icon"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_title"
                            android:textSize="@dimen/font_edit_large"
                            android:textStyle="bold" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/start_time_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/start_time"
                                android:textSize="@dimen/font_edit_small" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" to " />

                            <TextView
                                android:id="@+id/end_time_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/end_time"
                                android:textSize="@dimen/font_edit_small" />
                        </LinearLayout>
                    </LinearLayout>


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/reminder_icon"
                        android:layout_width="@dimen/icon_edit_large"
                        android:layout_height="@dimen/icon_edit_large"
                        android:src="@drawable/ic_action_alarm"
                        android:tint="@color/colorBlack" />

                    <LinearLayout
                        android:id="@+id/reminder_texts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/reminder_icon"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reminder_title"
                            android:textSize="@dimen/font_edit_large"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/reminder_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/reminder"
                                android:textSize="@dimen/font_edit_small" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" min"
                                android:textSize="@dimen/font_edit_small" />

                        </LinearLayout>
                    </LinearLayout>

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/note_icon"
                        android:layout_width="@dimen/icon_edit_large"
                        android:layout_height="@dimen/icon_edit_large"
                        android:src="@drawable/ic_action_texts"
                        android:tint="@color/colorBlack" />

                    <LinearLayout
                        android:id="@+id/note_texts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/note_icon"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note_title"
                            android:textSize="@dimen/font_edit_large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/note_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note"
                            android:textSize="@dimen/font_edit_small"
                            android:visibility="visible"/>

                        <EditText
                            android:visibility="gone"
                            android:id="@+id/add_note_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Add Note..."
                            android:background="@null"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/font_edit_small" />

                    </LinearLayout>

                </RelativeLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="save" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.10" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
