<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.10" />

                <LinearLayout
                    android:id="@+id/details_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="hello World" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/details_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/app_bar_height"
                    android:layout_weight="0.8"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/title_texts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:paddingLeft="10dp"
                                android:paddingTop="8dp"
                                android:text="@string/paper_details_title"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/font_edit_med_small" />

                        </LinearLayout>

                        <!--Start of Details Fields Style
                        to be replaced by edit view-->

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorPrimary" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/date_icon"
                            android:layout_width="@dimen/icon_edit_large"
                            android:layout_height="@dimen/icon_edit_large"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_action_calendar"
                            android:tint="@color/colorBlack" />

                        <LinearLayout
                            android:id="@+id/date_texts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/date_icon"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="DATE:"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/font_edit_med_small" />

                            <TextView
                                android:id="@+id/date_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date_sentence"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/font_edit_small_small" />
                        </LinearLayout>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/light_gray" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/time_icon"
                            android:layout_width="@dimen/icon_edit_large"
                            android:layout_height="@dimen/icon_edit_large"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_action_clock"
                            android:tint="#000" />

                        <LinearLayout
                            android:id="@+id/time_texts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/time_icon"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TIME:"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/font_edit_med_small" />

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/start_time_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/start_time"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="@dimen/font_edit_small_small" />

                                <TextView
                                    android:id="@+id/end_time_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="50dp"
                                    android:text="@string/end_time"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="@dimen/font_edit_small_small" />

                                <TextView
                                    android:id="@+id/middle_time_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="40dp"
                                    android:text="-"
                                    android:textSize="@dimen/font_edit_small_small" />

                            </RelativeLayout>

                        </LinearLayout>


                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/light_gray" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/reminder_icon"
                            android:layout_width="@dimen/icon_edit_large"
                            android:layout_height="@dimen/icon_edit_large"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_action_alarm"
                            android:tint="@color/colorBlack" />

                        <LinearLayout
                            android:id="@+id/reminder_texts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/reminder_icon"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="REMINDER:"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/font_edit_large" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/reminder_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/reminder"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="@dimen/font_edit_small_small" />

                                <TextView
                                    android:id="@+id/reminder_message"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="MINUTES BEFORE EVENT"
                                    android:textSize="@dimen/font_edit_small_small" />


                            </LinearLayout>
                        </LinearLayout>

                    </RelativeLayout>

                    <EditText
                        android:id="@+id/details_note"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:hint="Notes to Remember..."
                        android:textSize="@dimen/font_edit_small_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.10" />

            </LinearLayout>
        </RelativeLayout>
        <!--</LinearLayout>-->
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
